force-app/main/default/objects/Allocation_Repayment__c/Allocation_Repayment__c.object-meta.xml
<CustomObject>
    <label>Allocation Repayment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Allocation Repayment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Repayments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>