force-app/main/default/objects/Allocation_Repayment__c/fields/Invoice_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Allocation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Allocation</label>
    <referenceTo>Invoice_Allocation__c</referenceTo>
    <relationshipLabel>Allocation Repayments</relationshipLabel>
    <relationshipName>Allocation_Repayments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>