force-app/main/default/objects/Allocation_Repayment__c/fields/Invoice_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Repayment__c</fullName>
    <label>Invoice Repayment</label>
    <referenceTo>Invoice_Repayment__c</referenceTo>
    <relationshipLabel>Allocation Repayments</relationshipLabel>
    <relationshipName>Allocation_Repayments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>