force-app/main/default/objects/Allocation_Repayment__c/fields/Net_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Discount_Amount__c</fullName>
    <label>Net Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>